--- a/sito/ITALIANO/inostriprodotti/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti/inostriprodotti.html
@@ -121,12 +121,20 @@
                     </div>
                     <div class="rightSide"></div>
                     <div class="footer">
-                    <h3 class = "copy">ITIS Vinci Carpi (MO) 3CI 2021-2022 &copy;</h3>  
+                        <div id = "copyblock">
+                            <div class="copy">
+                                <h3 class = "copy">ITIS Vinci Carpi (MO) 3CI 2021-2022 &copy;</h3> 
+                            </div>
+                            <br />
+                            <div><a href="mailto:sproutassistenza@gmail.com?subject=Assistenza SPROUT"  class="contatti">sproutassistenza@gmail.com</a></div>
+                            <div class="contatti2">+39 00000034</div>
+                        </div>
                     <a href = "https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src = "../../immagini/logo facebook.png" class = "imf" /></a>
                     <a href = "https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src = "../../immagini/logo insta 2.png" class = "imi" /></a>
                     <a href = "https://twitter.com/CarpiSprout" target="new_blank"><img src = "../../immagini/logo twitter.png" class ="imt" /></a>
                     
                     </div>
+                </section>
                 </section>
  
     </body>
