--- a/sito/ITALIANO/modellografico.html
+++ b/sito/ITALIANO/modellografico.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="../../style.css" style="text/css" rel="stylesheet">
+<link href="../style.css" style="text/css" rel="stylesheet">
 <title>SPROUT</title>
 <link rel="icon" type="image/x-icon" href="../immagini/logo.png">
 <script type="text/javascript" src="data.json"></script>
@@ -44,7 +44,7 @@
 					<a href="index.html">MEN&Ugrave;</a>
 				</div>
 				<div class="testo">
-              <a href="" class="grafico menuz">GRAFICI</a>
+              <a href="modellografico.html" class="grafico menuz">GRAFICI</a>
        </div>
 				<div class="testo">
 					<a href="chisiamo.html">CHI SIAMO</a>
