--- a/sito/ITALIANO/arduionoallabase.html
+++ b/sito/ITALIANO/arduionoallabase.html
@@ -6,7 +6,7 @@
 		<meta name="author" content="3ci diurno" />
 		<meta name = "description" content="..." />
 		<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
-		<link href="../../style.css" type="text/css" rel="stylesheet" />
+		<link href="../style.css" type="text/css" rel="stylesheet" />
 		<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 		<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 		<link rel="icon" type="image/x-icon" href="../immagini/logo.png">
@@ -66,10 +66,7 @@
 					<a href="arduionoallabase.html" class="menuz">ARDUINO</a>
 				</div>
 				<div class="testo">
-					<a href="login.html" class="menuz">LOGIN</a>
-				</div>
-				<div class="testo">
-					<a href="#">MEN&Ugrave;</a>
+					<a href="login.html">LOGIN</a>
 				</div>
 				<hr class = "a" />
       </div>
