--- a/sito/ITALIANO/login.html
+++ b/sito/ITALIANO/login.html
@@ -54,7 +54,7 @@
 					<a href="modellografico.html" class="grafico">GRAFICI</a>
        </div>
 				<div class="testo">
-					<a href="chisiamo.html" class = "menuz">CHI SIAMO</a>
+					<a href="chisiamo.html">CHI SIAMO</a>
 				</div>
 				<div class="testo">
 					<a href="assistenza.html">ASSISTENZA</a>
@@ -63,10 +63,10 @@
 				  <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
-					<a href="arduionoallabase.html">ARDUINO</a>
+					<a href="arduionoallabase.html" class="menuz">ARDUINO</a>
 				</div>
 				<div class="testo">
-					<a href="login.html">LOGIN</a>
+					<a href="login.html" class = "menuz">LOGIN</a>
 				</div>
 				<hr class = "a" />
       </div>
