--- a/sito/ITALIANO/arduionoallabase.html
+++ b/sito/ITALIANO/arduionoallabase.html
@@ -75,7 +75,12 @@
 			 <!--Il corpo del sito-->
 				<section class="layout">
 					<div class="leftSide"></div>
-					<div class="body"></div>
+					<div class="body">
+						<form action="/" method="post" enctype="multipart/form-data">
+							<input type="file" name="images" accept="image/*" multiple>
+							<button>Invia</button>
+						  </form>
+					</div>
 					<div class="rightSide"></div>
 					<div class="footer">
 						<div id = "copyblock">
