--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -76,6 +76,7 @@
                 <section class="layout">
                     <div class="leftSide"></div>
                     <div class="body">
+                        <div class="centercaselle">
                         <a href="serra1base.html">
                             <div class="caselle">
                                     <img class="img" src="immagini/arduino.jpg">
@@ -130,6 +131,7 @@
                             <img class="img" src="../../immagini/pompa.JPG">
                             <figcaption>pompa irrigazione<br />boh bih</figcaption>
                         </div>
+                    </div>
                     </div>
                     <div class="rightSide"></div>
                     <div class="footer">
