--- a/sito/ITALIANO/arduionoallabase.html
+++ b/sito/ITALIANO/arduionoallabase.html
@@ -644,7 +644,7 @@
 												ajax.onerror = function()
 												{
 													form.classList.remove( 'is-uploading' );
-													alert( 'Caricamento completato.' );
+													alert( 'Caricamento completato!Vuoi caricare altro?' );
 												};
 							
 												ajax.send( ajaxData );
