--- a/sito/ITALIANO/serra1base.html
+++ b/sito/ITALIANO/serra1base.html
@@ -99,6 +99,21 @@
                     </div>
                     <div class="assicurazioni">
                         <div class="a1">
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
+                            <p>aaaa</p>
                         </div>
                         <div class="a1">
 
