--- a/sito/ITALIANO/chisiamo.html
+++ b/sito/ITALIANO/chisiamo.html
@@ -75,7 +75,18 @@
 			 <!--Il corpo del sito-->
 				<section class="layout">
 					<div class="leftSide"></div>
-					<div class="body"></div>
+					<div class="body">
+						<div style="padding: 15px;">
+								<h1>Chi siamo</h1>
+								<p style="font-size: 20px;">
+									Qui da SPROUT, la nostra filosofia è sempre stata quella di puntare alla qualità e alla soddisfazione dei clienti. Con le nostre piccole serre vogliamo dare una possibilità a tutti di coltivare, non solo le piante, ma anche le passioni.
+								</p>
+								<h1>I nostri punti di forza</h1>
+								<p style="font-size: 20px;">
+									Il nostro team di informatici sono dei curiosi per eccellenza, la loro attenzione ai dettagli e la loro voglia di fare sempre meglio e di innovare è una cosa che viene rispecchiata nei nostri prodotti, per questo noi puntiamo soprattutto su Collaborazione - Si lavora solo meglio se sai lavorare in compagnia Qualità dei materiali e produzione - Siamo specificamente puntigliosi su questo, migliori materiali, migliori persone, migliori prodotti. Curiosità - Una mente curiosa è una mente innovativa
+								</p>
+						</div>
+					</div>
 					<div class="rightSide"></div>
 					<div class="footer">
 						<div id = "copyblock">
