--- a/sito/ITALIANO/login.html
+++ b/sito/ITALIANO/login.html
@@ -10,7 +10,7 @@
 		<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 		<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 		<link rel="icon" type="image/x-icon" href="../immagini/logo.png">
-		<link href="../" type="text/css" rel="stylesheet" />
+		<link href="../login.css" type="text/css" rel="stylesheet" />
 	</head>
 
 
@@ -79,7 +79,7 @@
 					<div class="body">
 						<form method="post" action="/php/register.php">
 							<h1>Registrazione</h1>
-							<input type="text" id="username" placeholder="Username" name="username" maxlength="50" required>
+							<input type="text" id="username" placeholder="Username" name="username" maxlength="20" required>
 							<input type="password" id="password" placeholder="Password" name="password" required>
 							<button type="submit" name="register">Registrati</button>
 						</form>
