--- a/sito/ITALIANO/arduionoallabase.html
+++ b/sito/ITALIANO/arduionoallabase.html
@@ -87,6 +87,28 @@
 				<section class="layout">
 					<div class="leftSide"></div>
 					<div class="body">
+						<div class="centercaselle">
+							<a href="prova.zip" download="prova.zip">
+
+                            	<div class="caselle">
+                                	<img class="img" src="../immagini/arduino.png">
+                               		<figcaption>Progetto 1 Arduino<br />SCARICA IL PROGETTO</figcaption>
+								</div>
+							</a>
+						<a href="prova.zip" download="prova.zip">
+                            <div class="caselle">
+                                <img class="img" src="../immagini/arduino.png">
+                                <figcaption>Progetto 2 Arduino<br />SCARICA IL PROGETTO</figcaption>
+                            </div>
+						</a>
+						<a href="prova.zip" download="prova.zip">
+                            <div class="caselle">
+                                <img class="img" src="../immagini/arduino.png">
+                                <figcaption>Progetto 3 Arduino<br />SCARICA IL PROGETTO</figcaption>
+                            </div>
+						</a>
+					</div>
+						
 							<html lang="en" class="no-js">
 							<head>
 							<meta charset="utf-8">
