--- a/sito/ITALIANO/modellografico.html
+++ b/sito/ITALIANO/modellografico.html
@@ -4,7 +4,7 @@
 <link href="../style.css" style="text/css" rel="stylesheet">
 <title>SPROUT</title>
 <link rel="icon" type="image/x-icon" href="../immagini/logo.png">
-<script type="text/javascript" src="data.json"></script>
+<script type="text/javascript" src="test.json"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </head>
@@ -102,7 +102,7 @@
     
   <script>
     
-  const temp = JSON.parse(temperatura); // collego file json con rispettivi valori
+  const temp = JSON.parse(mediana_um); // collego file json con rispettivi valori
 
     // PRIMO GRAFICO /////////////////////////////////////////////////////////////
     const ctx = document.getElementById('myChart').getContext('2d');
@@ -112,7 +112,7 @@
           labels: ['giorno 1', 'giorno 2 ', 'giorno 3', 'giorno 4', 'giorno 5', 'giorno 8', 'giorno 9', 'giorno 10', 'giorno 11', 'giorno 12', 'giorno 13', 'giorno 14', 'giorno 15', 'giorno 16', 'giorno 17', 'giorno 18', 'giorno 19', 'giorno 20', 'giorno 21', 'giorno 22', 'giorno 23', 'giorno 24', 'giorno 25', 'giorno 26', 'giorno 27', 'giorno 28', 'giorno 29', 'giorno 30', 'giorno 31'],
           datasets: [{
             label: 'temperatura',
-            data: [temp[0].valore, temp[1].valore, temp[2].valore, temp[3].valore, temp[4].valore, temp[5].valore, temp[6].valore, temp[7].valore, temp[8].valore, temp[10].valore, temp[11].valore, temp[12].valore, temp[13].valore, temp[14].valore, temp[15].valore,],  // collegamento con il file json, array e loro valori
+            data: [temp[0].valore],  // collegamento con il file json, array e loro valori
             backgroundColor: ['rgba(255, 99, 11, 0.2)', 
                               'rgba(54, 162, 235, 0.2)', 
                               'rgba(255, 206, 86, 0.2)',
@@ -143,17 +143,17 @@
   </div>
   <div>
   <script>
-    const temperatura = JSON.parse(dataz)
+    const umidita = JSON.parse(media_um)
   
     // SECONDO GRAFICO /////////////////////////////////////////////////////////
     const ctx1 = document.getElementById('myChart1').getContext('2d');
     const myChart1 = new Chart(ctx1, {
-      type: 'line',
+      type: 'bar',
       data:{
           labels: ['giorno 1', 'giorno 2', 'giorno 3', 'giorno 4', 'giorno 5', 'giorno 6',],
           datasets: [{
             label: 'pressione',
-            data: [temperatura[0].valore, temperatura[1].valore, temperatura[2].valore],
+            data: [umidita[0].valore],
             fill: true,
             backgroundColor: ['rgba(255, 232, 132, 0.2)', 
                               'rgba(54, 162, 235, 0.2)', 
@@ -196,7 +196,7 @@
   </div>
   <div>
   <script>
-      const tempo = JSON.parse(datax);
+      const tempo = JSON.parse(media_temp);
     const ctx2 = document.getElementById('myChart2').getContext('2d');
     const myChart2 = new Chart(ctx2, {
       type: 'pie',
@@ -204,7 +204,7 @@
           labels: ['giorno 1', 'giorno 2', 'giorno 3',],
           datasets: [{
             label: 'acqua',
-            data: [tempo[0].valore, tempo[1].valore, tempo[2].valore],
+            data: [tempo[0].valore],
             backgroundColor: ['rgba(123, 222, 132, 0.2)', 
                               'rgba(54, 162, 235, 0.2)', 
                               'rgba(255, 206, 86, 0.2)', 
