--- a/sito/ITALIANO/modellografico.html
+++ b/sito/ITALIANO/modellografico.html
@@ -44,7 +44,7 @@
 					<a href="index.html">MEN&Ugrave;</a>
 				</div>
 				<div class="testo">
-              <a href="modellografico.html" class="grafico menuz">GRAFICI</a>
+              <a href="modellografico.html" class="menuz">GRAFICI</a>
        </div>
 				<div class="testo">
 					<a href="chisiamo.html">CHI SIAMO</a>
