--- a/sito/ITALIANO/serra1base.html
+++ b/sito/ITALIANO/serra1base.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="testo">
                     <a href="modellografico.html" class="grafico">GRAFICI</a>
-       </div>
+                </div>
                 <div class="testo">
                     <a href="chisiamo.html">CHI SIAMO</a>
                 </div>
@@ -63,10 +63,10 @@
                   <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
                 </div>
                 <div class="testo">
-                    <a href="arduionoallabase.html">ARDUINO ALLA BASE</a>
+                    <a href="arduionoallabase.html">ARDUINO</a>
                 </div>
                 <div class="testo">
-                    <a href="#">MEN&Ugrave;</a>
+                    <a href="login.html">LOGIN</a>
                 </div>
                 <hr class = "a" />
       </div>
@@ -78,48 +78,114 @@
                 <div class="body">
                     <div>
                         <img class="imgdettaglio" src="" width="250px" height="300px" />
-                        <div class="titolodettaglio"> Serra 1.0 di tipo BASE</div>
+                        <div class="titolodettaglio"> Serra 1.0 marchio S P R O UT</div>
                     </div>
                     <div>
                         <div class="rt">
-                            <p class="testobase">Con un prezzo di 159,99 euro, o con rate a prezzo 13,33 euro al mese, Il modello base offre un sensore temperatura, 4 servomotori, una scocca ed un porta batterie, con anche 2 settimane di abbonamento Standard, 1 pacchetto di semi di basilico e 3 mesi di garanzia.</p>  
-                        </div>     
-                        <div>
-                            
-                            <ol>
-                                <li class="int">Elementi</li>
-                                <li>Arduino</li>
-                                <li>BreadBoard</li>
-                                <li>Sensore di temperatura</li>
-                                <li>Servomotore (4 elementi)</li>
-                                <li>Scocca</li>
-                                <li>Portabatterie</li>
-                            </ol>
+                            <p class="testobase">La nostra mini-serra è stata progettata per soddisfare tutti i tipi di clienti: dalle persone che vogliono risparmiare a quelle che vogliono una serra completamente indipendente. Puoi scegliere tra tre modelli differenti, uno dedicato al risparmi, una versione semi-indipendente ed economica e una progettata per essere completamente indipendente.</p>
                         </div>
+                        
                     </div>
                     <div class="assicurazioni">
                         <div class="a1">
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
-                            <p>aaaa</p>
+                            <img src="../immagini/Logo base.jpg" class="alogo" />
+                            <h3 class="atitle">VERSIONE BASE</h3>
+                            <hr class="ahr" />
+                            <p class="ap">Garanzia: 2 anni</p>
+                            <p class="ap">Arduino</p>
+                            <p class="ap">BreadBoard</p>
+                            <p class="ap">Sensore di temperature</p>
+                            <p class="ap">Servomotore (4 elementi)</p>
+                            <p class="ap">Scocca</p>
+                            <p class="ap">Batteria</p>
+                            <p class="ap">Portabatteria</p>
+                            <p class="pno">Minidisplay + ultrasuoni</p>
+                            <p class="pno">Ventola</p>
+                            <p class="pno">Pompa irrigazione</p>
+                            <p class="pno">Fertilizzante</p>
+                            <p class="pno">Concime</p>
+                            <p class="pno">Portabatterie X2</p>
+                            <p class="pno">Batteria X2</p>
+                            <p class="pno">Pannello Solare</p>
+                            <p class="pno">Sensore ad ultrasuoni</p>
+                            <p class="pno">Pannello LCD</p>
+                            <p class="pno">Scelta colore legno</p>
+                            <p class="pno">Scelta colore vetro(trasparente o no)</p>
+                            <p class="pno">Pellicola anti-marcimento</p>
+                            <hr class="ahr" />
+                            <p class="aprezzo">159,99 €</p>
+                        </div>
+
+                        <div class="a1">
+                            <img src="../immagini/Logo medio.jpg" class="alogo" />
+                            <h3 class="atitle">VERSIONE MEDIA</h3>
+                            <hr class="ahr" />
+                            <p class="ap">Garanzia: 2 anni</p>
+                            <p class="ap">Arduino</p>
+                            <p class="ap">BreadBoard</p>
+                            <p class="ap">Sensore di temperature</p>
+                            <p class="ap">Servomotore (4 elementi)</p>
+                            <p class="ap">Scocca</p>
+                            <p class="ap">Batteria</p>
+                            <p class="ap">Portabatteria</p>
+                            <p class="ap">Minidisplay + ultrasuoni</p>
+                            <p class="ap">Ventola</p>
+                            <p class="ap">Pompa irrigazione</p>
+                            <p class="ap">Fertilizzante</p>
+                            <p class="ap">Concime</p>
+                            <p class="pno">Portabatterie X2</p>
+                            <p class="pno">Batteria X2</p>
+                            <p class="pno">Pannello Solare</p>
+                            <p class="pno">Sensore ad ultrasuoni</p>
+                            <p class="pno">Pannello LCD</p>
+                            <p class="pno">Scelta colore legno</p>
+                            <p class="pno">Scelta colore vetro(trasparente o no)</p>
+                            <p class="pno">Pellicola anti-marcimento</p>
+                            <hr class="ahr" />
+                            <p class="aprezzo">199,99 €</p>
                         </div>
                         <div class="a1">
 
+                            <img src="../immagini/Logo base.jpg" class="alogo" />
+                            <h3 class="atitle">VERSIONE AVANZATA</h3>
+                            <hr class="ahr" />
+                            <p class="ap">Garanzia: 2 anni</p>
+                            <p class="ap">Arduino</p>
+                            <p class="ap">BreadBoard</p>
+                            <p class="ap">Sensore di temperature</p>
+                            <p class="ap">Servomotore (4 elementi)</p>
+                            <p class="ap">Scocca</p>
+                            <p class="ap">Batteria</p>
+                            <p class="ap">Portabatteria</p>
+                            <p class="ap">Minidisplay + ultrasuoni</p>
+                            <p class="ap">Ventola</p>
+                            <p class="ap">Pompa irrigazione</p>
+                            <p class="ap">Fertilizzante</p>
+                            <p class="ap">Concime</p>
+                            <p class="ap">Portabatterie X2</p>
+                            <p class="ap">Batteria X2</p>
+                            <p class="ap">Pannello Solare</p>
+                            <p class="ap">Sensore ad ultrasuoni</p>
+                            <p class="ap">Pannello LCD</p>
+                            <p class="ap">Scelta colore legno</p>
+                            <p class="ap">Scelta colore vetro(trasparente o no)</p>
+                            <p class="ap">Pellicola anti-marcimento</p>
+                            <hr class="ahr" />
+                            <p class="aprezzo">269,99 €</p>
                         </div>
-                        <div class="a1"></div>
-                    </div>      
+                        <div class="abuy">
+                            <p><strong>COMPRA</strong></p>
+                        </div>
+
+                        <div class="abuy1">
+                            <p><strong>COMPRA</strong></p>
+                        </div>
+
+                        <div class="abuy2">
+                            <p><strong>COMPRA</strong></p>
+                        </div>
+                    </div>
+                    </div>
                 </div>
                 <div class="rightSide"></div>
                 <div class="footer">
