--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -80,19 +80,7 @@
                         <a href="serra1base.html">
                             <div class="caselle">
                                     <img class="img" src="immagini/arduino.jpg">
-                                        <figcaption>Serra 1.0 Base<br/>una serra facile, economica, di base</figcaption>
-                            </div>
-                        </a>
-                        <a href="serra1medio.html">
-                            <div class="caselle">
-                                <img class="img" src="">
-                                <figcaption>Serra 1.0 Medio<br />una via di mezzo di serra</figcaption>
-                            </div>
-                        </a>    
-                        <a href="serra1avanzato.html">
-                            <div class="caselle">
-                                <img class="img" src="">
-                                <figcaption>Serra 1.0 Avanzato<br/>il top di gamma delle serre</figcaption>
+                                        <figcaption>Serra 1.0 Marchio S P R O U T<br/>una serra per ogni tipo di cliente</figcaption>
                             </div>
                         </a>
                         <div class="caselle">
