--- a/sito/ITALIANO/serra1base.html
+++ b/sito/ITALIANO/serra1base.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>SPROUT</title>
-        <meta charset = "UTF-8" />
-        <meta name="author" content="3ci diurno" />
-        <meta name = "description" content="..." />
-        <meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
-        <link href="../style.css" type="text/css" rel="stylesheet" />
-        <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-        <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-        <link rel="icon" type="image/x-icon" href="../immagini/logo.png">
-    </head>
+<head>
+    <title>SPROUT</title>
+    <meta charset="UTF-8" />
+    <meta name="author" content="3ci diurno" />
+    <meta name="description" content="..." />
+    <meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
+    <link href="../style.css" type="text/css" rel="stylesheet" />
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+    <link rel="icon" type="image/x-icon" href="../immagini/logo.png">
+    <link href="serra1base.css" type="text/css" rel="stylesheet" />
+</head>
  
  
  
@@ -120,7 +121,7 @@
                             <img src="../immagini/Logo medio.jpg" class="alogo" />
                             <h3 class="atitle">VERSIONE MEDIA</h3>
                             <hr class="ahr" />
-                            <p class="ap">Garanzia: 2 anni</p>
+                            <p class="ap">Garanzia: 3 anni</p>
                             <p class="ap">Arduino</p>
                             <p class="ap">BreadBoard</p>
                             <p class="ap">Sensore di temperature</p>
@@ -149,7 +150,7 @@
                             <img src="../immagini/Logo base.jpg" class="alogo" />
                             <h3 class="atitle">VERSIONE AVANZATA</h3>
                             <hr class="ahr" />
-                            <p class="ap">Garanzia: 2 anni</p>
+                            <p class="ap">Garanzia: 4 anni</p>
                             <p class="ap">Arduino</p>
                             <p class="ap">BreadBoard</p>
                             <p class="ap">Sensore di temperature</p>
