--- a/sito/ITALIANO/modellografico.html
+++ b/sito/ITALIANO/modellografico.html
@@ -70,9 +70,9 @@
 					<div class="leftSide"></div>
 					<div class="body"> 
          <div class="chartBox">
-            <div class="porz1"><canvas id="myChart" width ="50px " height="50px"></canvas></div><p>CIAO questo è il primo grafico che rappresenta la temperatura ciao ciaociao ciao ciao ciaso </P> <!--id del primo grafico myChart-->
-            <div class="porz2"><canvas id="myChart1" width="50px" height="50px"></canvas></div><p>CIAO questo è il secondo grafico che rappresenta l'umidita</p>
-             <div class="porz3"><canvas id="myChart2" width="50px" height="50px"></canvas></div><p>questo è il terzo grafico che rappresenta l'umidita</p> <!--id del primo grafico myChart1-->
+            <div class="porz1"><canvas id="myChart" width ="50px " height="50px"></canvas></div><p class="testograf">CIAO questo è il primo grafico che rappresenta la temperatura ciao ciaociao ciao ciao ciaso </P> <!--id del primo grafico myChart-->
+            <div class="porz2"><canvas id="myChart1" width="50px" height="50px"></canvas></div><p class="testograf">CIAO questo è il secondo grafico che rappresenta l'umidita</p>
+             <div class="porz3"><canvas id="myChart2" width="50px" height="50px"></canvas></div><p class="testograf">questo è il terzo grafico che rappresenta l'umidita</p> <!--id del primo grafico myChart1-->
         </div>
       </div>
 					<div class="rightSide"></div>
