--- a/sito/ITALIANO/login.html
+++ b/sito/ITALIANO/login.html
@@ -11,6 +11,16 @@
 		<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 		<link rel="icon" type="image/x-icon" href="../immagini/logo.png">
 		<link href="../login.css" type="text/css" rel="stylesheet" />
+		<script type="text/javascript">
+			function mostraMessaggio() {
+				var username=document.getElementById("username").value;
+				if(username.length>=8&&username.length<=20) 
+			window.alert("Registrazione completata");
+			else{
+				window.alert("Qualcosa è andato storto, riprova");
+			}
+			}
+			</script>
 	</head>
 
 
@@ -77,17 +87,12 @@
 				<section class="layout">
 					<div class="leftSide"></div>
 					<div class="body">
-						<form method="post" action="/php/register.php">
+						<form >
 							<h1>Registrazione</h1>
-							<input type="text" id="username" placeholder="Username" name="username" maxlength="20" required>
-							<input type="password" id="password" placeholder="Password" name="password" required>
-							<button type="submit" name="register">Registrati</button>
-						</form>
-						<form method="post" action="/php/login.php">
-							<h1>Login</h1>
-							<input type="text" id="username" placeholder="Username" name="username">
-							<input type="password" id="password" placeholder="Password" name="password">
-							<button type="submit" name="login">Accedi</button>
+							<input type="text" id="username" placeholder="Username" name="username" maxlength="20" minlength="8" required>
+							<input type="password" id="password" placeholder="Password" name="password" minlength="8" required>
+							<input type="button" value="Registrati" class="b" onclick="mostraMessaggio()">
+							<!--<button type="submit" name="register">Registrati</button>-->
 						</form>
 					</div>
 					<div class="rightSide"></div>
