--- a/sito/ITALIANO/login.html
+++ b/sito/ITALIANO/login.html
@@ -89,8 +89,8 @@
 					<div class="body">
 						<form >
 							<h1>Registrazione</h1>
-							<input type="text" id="username" placeholder="Username" name="username" maxlength="20" minlength="8" required>
-							<input type="password" id="password" placeholder="Password" name="password" minlength="8" required>
+							<input type="text" id="username" placeholder="Nome (da 8 a 20 caratteri)" name="username" maxlength="20" minlength="8" required>
+							<input type="password" id="password" placeholder="Password (minimo di 8 caratteri)" name="password" minlength="8" required>
 							<input type="button" value="Registrati" class="b" onclick="mostraMessaggio()">
 							<!--<button type="submit" name="register">Registrati</button>-->
 						</form>
