--- a/sito/ITALIANO/login.html
+++ b/sito/ITALIANO/login.html
@@ -87,6 +87,7 @@
 				<section class="layout">
 					<div class="leftSide"></div>
 					<div class="body">
+					<div class="p">
 						<form >
 							<h1>Registrazione</h1>
 							<input type="text" id="username" placeholder="Nome (da 8 a 20 caratteri)" name="username" maxlength="20" minlength="8" required>
@@ -94,6 +95,7 @@
 							<input type="button" value="Registrati" class="b" onclick="mostraMessaggio()">
 							<!--<button type="submit" name="register">Registrati</button>-->
 						</form>
+					</div>
 					</div>
 					<div class="rightSide"></div>
 					<div class="footer">
