--- a/sito/ITALIANO/login.html
+++ b/sito/ITALIANO/login.html
@@ -17,7 +17,7 @@
 				if(username.length>=8&&username.length<=20) 
 			window.alert("Registrazione completata");
 			else{
-				window.alert("Qualcosa è andato storto, riprova");
+				window.alert("Qualcosa è andato storto,controlla il numero di caratteri e riprova");
 			}
 			}
 			</script>
