--- a/sito/ITALIANO/arduionoallabase.html
+++ b/sito/ITALIANO/arduionoallabase.html
@@ -68,9 +68,6 @@
 					<a href="chisiamo.html">CHI SIAMO</a>
 				</div>
 				<div class="testo">
-					<a href="assistenza.html">ASSISTENZA</a>
-				</div>
-				<div class="testo">
 				  <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
@@ -112,55 +109,55 @@
 						<h1>APRI I NOSTRI DATASHEET UFFICIALI</h1>
 
 
-						<a href="Datasheet servomotore.docx.pdf" download="Datasheet servomotore.docx.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet servomotore.pdf"  target="new_blank">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet servomotore<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="Datasheet sensore umidità.docx.pdf" download="Datasheet sensore umidità.docx.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet sensore umidità.pdf" target="new_blank">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet sensore umidità<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="Datasheet sensore temperatura.docx.pdf" download="Datasheet sensore temperatura.docx.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet sensore temperatura.pdf" target="new_blank">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet sensore temperatura<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="Datasheet relay.pdf" download="Datasheet relay.pdf">
+						<a href="../datasheet/Datasheet relay.pdf" target="new_blank">
                             <div class="caselle" target="new_blank">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet relay<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="Datasheet motore Arduino.docx.pdf" download="Datasheet motore Arduino.docx.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet motore Arduino.pdf" target="new_blank">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet motore Arduino<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="Datasheet della pompa dell’acqua.pdf" download="Datasheet della pompa dell’acqua.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet della pompa dell’acqua.pdf" target="new_blank">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet pompa dell'acqua<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="Datasheet del fotoresistore.pdf" download="Datasheet del fotoresistore.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet del fotoresistore.pdf"  target="new_blank">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet fotoresistore<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="Datasheet breadboard Arduino.docx.pdf" download="Datasheet breadboard Arduino.docx.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet breadboard Arduino.pdf" target="new_blank">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet breadboard Arduino<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="Datasheet Arduino UNO.docx.pdf" download="Datasheet Arduino UNO.docx.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet Arduino UNO.pdf"  target="new_blank">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet Arduino 1.0<br />APRI IL DATASHEET</figcaption>
