--- a/sito/ITALIANO/arduionoallabase.html
+++ b/sito/ITALIANO/arduionoallabase.html
@@ -88,19 +88,19 @@
 							<h1>SCARICA I NOSTRI PROGETTI ARDUINO UFFICIALI</h1>
 							<a href="Datasheet sensore temperatura.docx.pdf" download="Datasheet sensore temperatura.docx.pdf"></a>
                             	<div class="caselle">
-                                	<img class="img" src="../immagini/arduino.png">
+                                	<img class="img" src="../immagini/download.png">
                                		<figcaption>Progetto 1 Arduino<br />SCARICA IL PROGETTO</figcaption>
 								</div>
 							</a>
 						<a href="prova.zip" download="prova.zip">
                             <div class="caselle">
-                                <img class="img" src="../immagini/arduino.png">
+                                <img class="img" src="../immagini/download.png">
                                 <figcaption>Progetto 2 Arduino<br />SCARICA IL PROGETTO</figcaption>
                             </div>
 						</a>
 						<a href="prova.zip" download="prova.zip">
                             <div class="caselle">
-                                <img class="img" src="../immagini/arduino.png">
+                                <img class="img" src="../immagini/download.png">
                                 <figcaption>Progetto 3 Arduino<br />SCARICA IL PROGETTO</figcaption>
                             </div>
 						</a>
@@ -109,55 +109,55 @@
 						<h1>APRI I NOSTRI DATASHEET UFFICIALI</h1>
 
 
-						<a href="../datasheet/Datasheet servomotore.pdf"  target="new_blank">
+						<a href="../datasheet/Datasheet servomotore.pdf"  target="new_blank" class="pdf">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet servomotore<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="../datasheet/Datasheet sensore umidità.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet sensore umidità.pdf" target="new_blank" class="pdf">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet sensore umidità<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="../datasheet/Datasheet sensore temperatura.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet sensore temperatura.pdf" target="new_blank" class="pdf">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet sensore temperatura<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="../datasheet/Datasheet relay.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet relay.pdf" target="new_blank" class="pdf">
                             <div class="caselle" target="new_blank">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet relay<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="../datasheet/Datasheet motore Arduino.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet motore Arduino.pdf" target="new_blank" class="pdf">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet motore Arduino<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="../datasheet/Datasheet della pompa dell’acqua.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet della pompa dell’acqua.pdf" target="new_blank" class="pdf">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet pompa dell'acqua<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="../datasheet/Datasheet del fotoresistore.pdf"  target="new_blank">
+						<a href="../datasheet/Datasheet del fotoresistore.pdf"  target="new_blank" class="pdf">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet fotoresistore<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="../datasheet/Datasheet breadboard Arduino.pdf" target="new_blank">
+						<a href="../datasheet/Datasheet breadboard Arduino.pdf" target="new_blank" class="pdf">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet breadboard Arduino<br />APRI IL DATASHEET</figcaption>
                             </div>
 						</a>
-						<a href="../datasheet/Datasheet Arduino UNO.pdf"  target="new_blank">
+						<a href="../datasheet/Datasheet Arduino UNO.pdf"  target="new_blank" class="pdf">
                             <div class="caselle">
                                 <img class="img" src="../immagini/arduino.png">
                                 <figcaption>Datasheet Arduino 1.0<br />APRI IL DATASHEET</figcaption>
