--- a/sito/ITALIANO/serra1base.html
+++ b/sito/ITALIANO/serra1base.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="assicurazioni">
                         <div class="a1">
-                            <img src="../immagini/Logo base.jpg" class="alogo" />
+                            <img src="../immagini/Logo base.png" class="alogo" />
                             <h3 class="atitle">VERSIONE BASE</h3>
                             <hr class="ahr" />
                             <p class="ap">Garanzia: 2 anni</p>
@@ -115,7 +115,7 @@
                         </div>
 
                         <div class="a1">
-                            <img src="../immagini/Logo medio.jpg" class="alogo" />
+                            <img src="../immagini/Logo medio.png" class="alogo2" />
                             <h3 class="atitle">VERSIONE MEDIA</h3>
                             <hr class="ahr" />
                             <p class="ap">Garanzia: 3 anni</p>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="a1">
 
-                            <img src="../immagini/Logo base.jpg" class="alogo" />
+                            <img src="../immagini/Logo avanzato.png" class="alogo" />
                             <h3 class="atitle">VERSIONE AVANZATA</h3>
                             <hr class="ahr" />
                             <p class="ap">Garanzia: 4 anni</p>
