--- a/sito/INGLESE/indexinglese.html
+++ b/sito/INGLESE/indexinglese.html
@@ -37,8 +37,8 @@
 						<li>
 						<a class = "lingua">Language</a> <!-- primo list-item, prima voce del menu -->
 							<ul> <!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="index.html">Italian</a></li>
-							<li><a href="#">English</a></li>
+							<li><a href="../italiano/index.html">Italian</a></li>
+							<li><a href="indexinglese.html">English</a></li>
 							</ul> <!-- Fine del sotto-menu -->
 						</li> <!-- Chiudo il list-item -->
 						<!--qui altri list-item -->
@@ -69,22 +69,22 @@
       <hr class = "a" />
       <div id="menu"> <!--Menù di navigazione-->
 				<div class="testo">
-					<a href = "index.html">MEN&Ugrave;</a>
+					<a href = "indexinglese.html">MEN&Ugrave;</a>
 				</div>
 				<div class="testo">
-					<a href="grafici.html" class="grafico">DATA</a>
+					<a href="graficiinglese.html" class="grafico">DATA</a>
        </div>
 				<div class="testo">
-					<a href="chisiamo.html">ABOUT US</a>
+					<a href="chisiamoinglese.html">ABOUT US</a>
 				</div>
 				<div class="testo">
-				  <a href ="inostriprodotti.html">OUR PRODUCTS</a>
+				  <a href ="inostriprodottiinglese.html">OUR PRODUCTS</a>
 				</div>
 				<div class="testo">
-					<a href="arduionoallabase.html">ARDUINO</a>
+					<a href="arduionoallabaseinglese.html">ARDUINO</a>
 				</div>
 				<div class="testo">
-					<a href="#">MEN&Ugrave;</a>
+					<a href="logininglese.html">LOGIN</a>
 				</div>
 				<hr class = "a" />
       </div>
