--- a/sito/ITALIANO/chisiamo.html
+++ b/sito/ITALIANO/chisiamo.html
@@ -91,7 +91,45 @@
 								<div class="mappa">
 									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2831.8656339608087!2d10.86935701580353!3d44.783544586621176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477f8d2b8f68203f%3A0x18bf11e34947dd65!2sItis%20Leonardo%20Da%20Vinci!5e0!3m2!1sit!2sit!4v1646903940472!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 								</div>
-							</div>
+						</div>
+						<div>
+							<h1> Il nostro team</h1>
+								<div class="filaimmagini">
+									<img class="inlineclasse" src="../immagini/Albanese Paolo.png" />
+									<img class="inlineclasse" src="../immagini/Alberto Impagliazzo.png" />
+									<img class="inlineclasse" src="../immagini/Alessandro Fusari.png" />
+									<p style="text-align: right; margin-right: 660px;">Albanese Paolo</p>
+									<img class="inlineclasse" src="../immagini/Alex Rossi.png" />
+									<img class="inlineclasse" src="../immagini/Federico Meliani.png" />							
+									<img class="inlineclasse" src="../immagini/Federico Savani.png" />							
+									<img class="inlineclasse" src="../immagini/Ispani Filippo.png" />
+									<img class="inlineclasse" src="../immagini/Lorenzo Bergianti.png" />
+									<img class="inlineclasse" src="../immagini/Marco Galavotti.png" />
+									<img class="inlineclasse" src="../immagini/Nicholas Giacobbe.png" />
+									<img class="inlineclasse" src="../immagini/Raimond Paraschiv.png" />
+									<img class="inlineclasse" src="../immagini/Rascutoi Emanuel.png" />
+									<img class="inlineclasse" src="../immagini/Rebecchi Simone.png" />
+									<img class="inlineclasse" src="../immagini/Rossi Achille.png" />
+									<img class="inlineclasse" src="../immagini/Rossi Matteo.png" />
+									<img class="inlineclasse" src="../immagini/Tommaso Curto.png" />
+									<img class="inlineclasse" src="../" />
+									<img class="inlineclasse" src="../" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+									<img class="inlineclasse" src="" />
+								</div>
+						</div>
+
 					</div>
 					<div class="rightSide"></div>
 					<div class="footer">
