--- a/sito/ITALIANO/login.html
+++ b/sito/ITALIANO/login.html
@@ -20,6 +20,14 @@
 				window.alert("Qualcosa è andato storto,controlla il numero di caratteri e riprova");
 			}
 			}
+			function mostraMessaggio() {
+				var password=document.getElementById("password").value;
+				if(password.length>=8) 
+			window.alert("Registrazione completata");
+			else{
+				window.alert("Qualcosa è andato storto,controlla il numero di caratteri e riprova");
+			}
+			}
 			</script>
 	</head>
 
